--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ function initialize() {
     // end toggle layers 
 
 
+  ('.myCheckbox').prop('checked', true); 
 
   </script>
 
-  <script>$('.myCheckbox').prop('checked', true);</script> 
 
 
 
