--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function initialize() {
         if (layers[i].getMap() == null) {
             layers[i].setMap(map);
         } else {
-            layers[i].setMap(map);
+            layers[i].setMap(null);
         }
         google.maps.event.addListener(layers[i], 'status_changed', function () {
 
