--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ layers[1] = new google.maps.KmlLayer('http://www.geocodezip.com/geoxml3_test/uta
 // intialize 
 
 function initialize() {
-    var myLatlng = new google.maps.LatLng(40, -110);
+    var myLatlng = new google.maps.LatLng(41.47750250433729, -73.69938567983453);
     var mapOptions = {
-        zoom: 5,
+        zoom: 9,
         center: myLatlng,
         mapTypeId: google.maps.MapTypeId.ROADMAP,
         styles: [
