--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layers[1] = new google.maps.KmlLayer('http://www.geocodezip.com/geoxml3_test/uta
 // intialize 
 
 function initialize() {
-    var myLatlng = new google.maps.LatLng(40, -110);
+    var myLatlng = new google.maps.LatLng(41.20065039235972, -73.72510912601821);
     var mapOptions = {
         zoom: 5,
         center: myLatlng,
